--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -922,7 +922,7 @@ h1.text-center {
 .article-section {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 20px;
+  gap: 30px;
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
@@ -1253,6 +1253,12 @@ hr {
   font-size: 1rem;
   margin: 20px 0;
 }
+
+.list-article {
+  padding-left: 30px;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
 /* ? pages end */
 
 /* ? previous menu */
@@ -1363,12 +1369,17 @@ hr {
   }
 
   .desc-article p {
-    font-size: .8rem;
+    font-size: 0.8rem;
     margin: 20px 0;
   }
 
+  .list-article {
+    padding-left: 20px;
+    font-size: 1.2rem;
+  }
+
   .previous a {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 }
 
